# youtube-shorts-automation

./: .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
channels/channel_a/: config.json
discord_agent/: poller.py  prompt.md  run.bat  state.json
docs/superpowers/plans/: 2026-04-16-core-harness.md  2026-04-17-discord-agent.md  2026-04-17-plan4-image-video-edit.md  2026-04-18-plan5-thumbnail-upload.md
docs/superpowers/specs/: 2026-04-16-youtube-shorts-automation-design.md  2026-04-17-discord-agent-design.md  2026-04-17-plan2-benchmark-script-design.md  2026-04-17-plan4-image-video-edit-design.md
src/cli/: main.py
src/config/: channel.py  settings.py
src/pipeline/: context.py  runner.py  state.py
src/services/: claude.py  elevenlabs.py  ffmpeg.py  flux.py  kling.py  youtube.py  youtube_upload.py
src/stages/: base.py  benchmark.py  edit.py  image_video.py  script.py  storyboard.py  thumbnail.py  tts.py  upload.py
tests/integration/: test_resume.py
tests/unit/: test_benchmark_stage.py  test_checkpoint.py  test_cli.py  test_config.py  test_edit_stage.py  test_image_video_stage.py  test_pipeline_runner.py  test_script_stage.py  test_storyboard_stage.py  test_thumbnail_stage.py  test_tts_stage.py  test_upload_stage.py
